--- a/Motor J1/Motor2D/Motor2D.vcxproj.filters
+++ b/Motor J1/Motor2D/Motor2D.vcxproj.filters
@@ -108,4 +108,9 @@
       <UniqueIdentifier>{7cb78d67-17cc-45eb-af97-e2106becce7b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config">
+      <Filter>Desenvolupament  ========</Filter>
+    </None>
+  </ItemGroup>
 </Project>
