--- a/Motor J1/Motor2D/app.config
+++ b/Motor J1/Motor2D/app.config
@@ -47,3 +47,11 @@
 
 
 
+/*
+HOMEWORK:
+
+  1. Fill a config.xml with a asection per module that has the same name
+  2. Add functionality to App to send the correct xml_node to each module
+  3. Remove all configuration defines from defs.h
+
+*/
